# kalandra

./: .gitignore  Cargo.toml  README.md  clippy.toml
crates/kalandra-client/: Cargo.toml
crates/kalandra-client/src/: client.rs  error.rs  event.rs  lib.rs  sender_key_store.rs
crates/kalandra-core/: Cargo.toml
crates/kalandra-core/src/: connection.rs  env.rs  error.rs  lib.rs  room_manager.rs  sequencer.rs
crates/kalandra-core/tests/: chaos_connection.rs  chaos_sequencer.rs  connection_properties.rs  frame_snapshots.rs  mls_group_properties.rs  room_manager_test.rs
crates/kalandra-harness/: Cargo.toml
crates/kalandra-harness/src/: sim_env.rs  sim_server.rs
crates/kalandra-harness/tests/: fault_injection_test.rs  mls_group_test.rs  optimality_test.rs  ping_pong_test.rs  sequencer_test.rs  server_basic_test.rs  server_broadcast_test.rs  simulation_properties.rs  storage_test.rs
crates/kalandra-proto/src/: header.rs
crates/kalandra-proto/tests/: frame_properties.rs
crates/kalandra-server/: Cargo.toml
crates/kalandra-server/src/: driver.rs  error.rs  executor.rs  lib.rs  main.rs  room_manager.rs  sequencer.rs  system_env.rs
crates/kalandra-server/tests/: chaos_sequencer.rs  chaos_storage.rs  room_manager_properties.rs  room_manager_test.rs
crates/lockframe-client/: Cargo.toml
crates/lockframe-client/src/: client.rs  error.rs  event.rs  lib.rs  sender_key_store.rs
crates/lockframe-core/: Cargo.toml
crates/lockframe-core/src/: connection.rs  env.rs  error.rs  lib.rs  transport.rs
crates/lockframe-core/tests/: chaos_connection.proptest-regressions  chaos_connection.rs  connection_properties.rs  frame_snapshots.rs  mls_group_properties.rs
crates/lockframe-crypto/: Cargo.toml
crates/lockframe-crypto/src/: lib.rs
crates/lockframe-crypto/tests/: sender_keys_properties.rs
crates/lockframe-harness/: Cargo.toml
crates/lockframe-harness/src/: lib.rs  sim_env.rs  sim_server.rs  sim_transport.rs
crates/lockframe-harness/tests/: client_e2e_test.rs  (+12 more)
crates/lockframe-proto/: Cargo.toml
crates/lockframe-server/: Cargo.toml
crates/sunder-core/: Cargo.toml
crates/sunder-harness/: Cargo.toml
crates/sunder-harness/src/: lib.rs  sim_env.rs  sim_transport.rs
crates/sunder-harness/tests/: determinism_test.rs
crates/sunder-proto/: Cargo.toml
docs/: ARCHITECTURE.md  CLIENT.md  PROTOCOL.md  ROADMAP.md  SERVER.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cbor_attack_fuzzer.rs  connection_state_fuzzer.rs  e2e_pipeline_fuzzer.rs  frame_boundary_fuzzer.rs  frame_decode.rs  frame_exhaustive.rs  mls_signature_fuzzer.rs  payload_decode.rs  room_manager_fuzzer.rs  sequencer_invalid.rs  sequencer_state_fuzzer.rs
scripts/: fuzz-local.sh
(+81 files in other folders)
