[package]
name = "lockframe-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# Crates to fuzz
lockframe-proto = { path = "../crates/lockframe-proto" }
lockframe-core = { path = "../crates/lockframe-core" }

# Dependencies needed for fuzzing
bytes = "1.11"

# Fuzz targets
[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sequencer_invalid"
path = "fuzz_targets/sequencer_invalid.rs"
test = false
doc = false
bench = false

[[bin]]
name = "payload_decode"
path = "fuzz_targets/payload_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frame_exhaustive"
path = "fuzz_targets/frame_exhaustive.rs"
test = false
doc = false
bench = false
